templates/ortelius_template.yaml
---
# Source: ortelius/charts/ms-compitem-crud/templates/service.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: ms-compitem-crud
spec:
  selector:
    app: ms-compitem-crud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
---
# Source: ortelius/charts/ms-dep-pkg-cud/templates/service.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: ms-dep-pkg-cud
spec:
  selector:
    app: ms-dep-pkg-cud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
---
# Source: ortelius/charts/ms-dep-pkg-r/templates/service.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: ms-dep-pkg-r
spec:
  selector:
    app: ms-dep-pkg-r
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
---
# Source: ortelius/charts/ms-general/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-general
  labels:
    app.kubernetes.io/name: ms-general
    helm.sh/chart: ms-general-10.0.321
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app: ms-general
    tier: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
# Source: ortelius/charts/ms-nginx/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ms-nginx
spec:
  selector:
    app: ms-nginx
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
      
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  type: NodePort
---
# Source: ortelius/charts/ms-scorecard/templates/service.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: ms-scorecard
spec:
  selector:
    app: ms-scorecard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
---
# Source: ortelius/charts/ms-textfile-crud/templates/service.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: ms-textfile-crud
spec:
  selector:
    app: ms-textfile-crud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
---
# Source: ortelius/charts/ms-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-ui
  labels:
    app.kubernetes.io/name: ms-ui
    helm.sh/chart: ms-ui-10.0.321
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app: ms-ui
    tier: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
# Source: ortelius/charts/ms-validate-user/templates/service.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: ms-validate-user
spec:
  selector:
    app: ms-validate-user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
---
# Source: ortelius/charts/ms-compitem-crud/templates/deployment.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ms-compitem-crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ms-compitem-crud
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app:  ms-compitem-crud
        tier: backend
        track: stable
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: ms-compitem-crud
          image: "quay.io/ortelius/ms-compitem-crud:main-v10.0.627-g84c65a"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
---
# Source: ortelius/charts/ms-dep-pkg-cud/templates/deployment.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ms-dep-pkg-cud
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ms-dep-pkg-cud
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app:  ms-dep-pkg-cud
        tier: backend
        track: stable
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: ms-dep-pkg-cud
          image: "quay.io/ortelius/ms-dep-pkg-cud:main-v10.0.730-g9fab1f"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
---
# Source: ortelius/charts/ms-dep-pkg-r/templates/deployment.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-dep-pkg-r
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-dep-pkg-r
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: ms-dep-pkg-r
        tier: backend
        track: stable
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: ms-dep-pkg-r
          image: "quay.io/ortelius/ms-dep-pkg-r:main-v10.0.770-g54fcac"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
---
# Source: ortelius/charts/ms-general/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-general
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ms-general
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: ms-general
        tier: backend
        track: stable
    spec:
      nodeSelector:
        kubernetes.io/os: linux    
      containers:
        - name: ms-general
          image: "quay.io/ortelius/ms-general:main-v10.0.321-g90e337"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
# Source: ortelius/charts/ms-nginx/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ms-nginx
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: ms-nginx
        tier: frontend
        track: stable
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: ms-nginx
          image: "quay.io/ortelius/ms-nginx:main-v10.0.321-g90e337"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          
---
# Source: ortelius/charts/ms-scorecard/templates/deployment.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ms-scorecard
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ms-scorecard
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app:  ms-scorecard
        tier: backend
        track: stable
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: ms-scorecard
          image: "quay.io/ortelius/ms-scorecard:main-v10.0.620-gea7bab"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
---
# Source: ortelius/charts/ms-textfile-crud/templates/deployment.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ms-textfile-crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ms-textfile-crud
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app:  ms-textfile-crud
        tier: backend
        track: stable
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: ms-textfile-crud
          image: "quay.io/ortelius/ms-textfile-crud:main-v10.0.662-gf9f09b"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
---
# Source: ortelius/charts/ms-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ms-ui
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: ms-ui
        tier: backend
        track: stable
    spec:
      nodeSelector:
        kubernetes.io/os: linux    
      containers:
        - name: ms-ui
          image: "quay.io/ortelius/ms-ui:main-v10.0.321-g90e337"
          imagePullPolicy: 
          ports:
            - name: http
              containerPort: 8080
---
# Source: ortelius/charts/ms-validate-user/templates/deployment.yaml
# Copyright (c) 2021 Linux Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ms-validate-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ms-validate-user
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app:  ms-validate-user
        tier: backend
        track: stable
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: ms-validate-user
          image: "quay.io/ortelius/ms-validate-user:main-v10.0.707-g5ce042"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
---
# Source: ortelius/charts/ms-nginx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-nginx
  labels:
    app: ms-nginx
spec:

  ingressClassName: nginx
  
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms-nginx
            port:
              number: 80
---
# Source: ortelius/charts/ms-nginx/templates/ingress.yaml
# Setup nginx ingress class and ingress controller for Kind
